--- a/1.form-validator/index.html
+++ b/1.form-validator/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Hello brother</h1>
     <h2>I Sheliping</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam quo ipsam mollitia voluptatibus velit maiores sequi accusamus itaque laborum, aperiam ut esse error dolorem ex illum adipisci libero eum corporis, est neque corrupti iusto officia iste. Odit nihil sequi reiciendis iusto provident eius expedita, in mollitia accusantium repellendus atque et?/p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam quo ipsam mollitia voluptatibus velit maiores sequi accusamus itaque laborum, aperiam ut esse error dolorem ex illum adipisci libero eum corporis, est neque corrupti iusto officia iste. Odit nihil sequi reiciendis iusto provident eius expedita, in mollitia accusantium repellendus atque et</p>
+    <img src="Tanisa.jpg" alt="">
         
 </body>
 </html>
